# anicham.py

./: .env  .gitignore  LICENSE  Pipfile  README.md  build.sh  generate.sh  package_test.sh  pyproject.toml
grammar/: Tamizh.g4
grammar/Yappu/: Venba.g4
scripts/: package-test.Dockerfile
src/: anicham.py  compiler.py  main.py
src/anicham/: __init__.py  compiler.py
src/anicham/parser/grammar/: Tamizh.interp  TamizhLexer.py  TamizhListener.py  TamizhParser.py
src/anicham/parser/grammar/Yappu/: Venba.interp  VenbaLexer.py  VenbaParser.py
src/anicham/visitors/: tamizh_visitor_impl.py  venba_visitor_impl.py
src/anicham/visitors/ast/: venba.py
src/parser/grammar/: TamizhLexer.interp  TamizhListener.py  TamizhVisitor.py
src/parser/grammar/Yappu/: VenbaLexer.interp  VenbaListener.py  VenbaVisitor.py
src/visitors/: tamizh_visitor_impl.py  venba_visitor_impl.py
src/visitors/ast/: venba.py
test/: test_anicham.py
tests/: test_anicham.py
